--- a/Application/src/main/res/layout/fragment_pdf_renderer_basic.xml
+++ b/Application/src/main/res/layout/fragment_pdf_renderer_basic.xml
@@ -1,110 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  Copyright (C) 2014 The Android Open Source Project
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-       http://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<WebView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     android:orientation="vertical"
+    android:background="@android:color/darker_gray"
     tools:context=".MainActivity$PlaceholderFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
         android:orientation="vertical">
 
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image0"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image1"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image4"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image5"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image6"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image7"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image8"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image9"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
-        <com.example.android.pdfrendererbasic.TouchImageView
-            android:id="@+id/image10"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="@android:color/white"
-            android:scaleType="fitCenter" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/image0"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="10px"
+                    android:scaleType="centerCrop" />
 
-    </LinearLayout>
-</ScrollView>
+                <ImageView
+                    android:id="@+id/image1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="10px"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/image2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop" />
+
+                <ImageView
+                    android:id="@+id/image3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="centerCrop" />
+
+        </LinearLayout>
+    </ScrollView>
+</WebView>
